Fix alignment for the buttons

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ h1 {
     background-color: var(--primary-color);
     color: var(--text-color);
     transition: 1s ease;
+    justify-self: center;
 }
 
 #result {
